# jupyterlab-outsource

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  anaconda-project.yml  dodo.py  environment.yml  jupyter_notebook_config.json  labex.txt  labextensions.txt  package.json  postBuild  setup.cfg  setup.py  tsconfigbase.json  tslint.json
.binder/: environment.yml  postBuild
.github/workflows/: ci.yml
atest/: 00_Smoke.robot  __init__.robot
notebooks/: index.ipynb
src/_core/: package.json  tsconfig.json
src/_core/src/: button.ts  extension.ts  index.ts  picker.tsx  sourcerer.ts  sourceror.ts  widget.ts
src/_core/src/buttons/: editor.ts  (+1 more)
src/_core/style/: index.css
src/_meta/: package.json  tsconfig.json
src/_meta/src/: index.ts
src/blockly/: package.json
src/blockly/notebooks/: Robot Blocks.ipynb
src/blockly/src/: extension.ts  factory.ts  index.ts  robot.ts  typings.d.ts  widget.ts
src/blockly/style/: index.css
src/blockly/xml/: robot.xml  toolbox.xml
src/jupyterlab_outsource/: __init__.py  _version.py  install.json
src/jupyterlab_outsource/tests/: test_meta.py
src/prosemirror/: package.json  tsconfig.json
src/prosemirror/src/: extension.ts  factory.ts  index.ts  typings.d.ts  widget.ts
src/prosemirror/style/: index.css
src/py/jupyter_y_websockets/: README.md  setup.cfg
src/py/jupyter_y_websockets/src/jupyter_y_websockets/: __init__.py  manager.py  nbserverextension.py
src/ts/_core/: package.json  tsconfig.json
src/ts/_meta/: tsconfig.json
src/ts/prosemirror/: package.json  tsconfig.json
src/ts/y/: package.json
(+15 files in other folders)
