[metadata]
name = jupyter_y_websockets
version = 0.1.0
description = a yjs-websockets backend for jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/jupyterlab-outsource
author = dead pixels collective
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    notebook
    python-socketio
package_dir =
    = src
packages =
  jupyter_y_websockets
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
